# pex-bibtex

./: .editorconfig  Cargo.toml
projects/bibtex/: Cargo.toml  readme.md
projects/bibtex-web/: Cargo.toml
projects/bibtex-web/tests/: main.rs  refs.bib
projects/bibtex/src/: lib.rs
projects/bibtex/src/item/: der.rs  mod.rs  parser.rs  ser.rs
projects/bibtex/src/value/: display.rs  mod.rs  parser.rs  ser.rs
projects/bibtex/tests/: main.rs  refs.bib
projects/latexify/: Cargo.toml  readme.md
projects/latexify/src/: lib.rs
projects/latexify/src/for_std/: mod.rs
