[package]
name = "bibtex"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "BibTeX parser and formatter"
repository = "https://github.com/ygg-lang/pex-bibtex"
documentation = "https://docs.rs/pex-bibtex"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.3"
serde = { version = "1.0.160", optional = true }
pex = "0.0.8"

[dev-dependencies]

[features]
default = []
serde = ["dep:serde"]