[package]
name = "latexify"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared definition for turn a rust object into latex code"
repository = "https://github.com/oovm/bibtex/tree/dev/projects/latexify"
documentation = "https://docs.rs/latexify"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []
